       appears to inform the user of the finished
       command. (Stefan)
- ADD: new menu entry in the log dialog: it's now
       possible to "update to revision" with a
       right click on a specific revision log
       entry. Issue 44. (Stefan)
- ADD: the about box now contains the version
       of subversion TortoiseSVN is linked
       against. Issue 43. (Stefan)
       
Version 0.10.0
- BUG: if several files are selected for committing
       and the first one is unversioned or just
       added a crash occured (Stefan)
- BUG: if a folder was renamed in a working copy
       with a system rename (not a 'svn rename')
       then explorer crashed. Issue 39. (Stefan)
- BUG: if an error occured while reading the
       config file it wasn't reported. (Stefan)
- BUG: the settings page crashed if not all pages
       were selected before hitting "ok". (Stefan)
- BUG: copy/paste and drag'n'drop of unversioned
       files could crash explorer. (Stefan)
- BUG: import with "use foldername as modulename"
       didn't work, the modulename was some random
       characters. (Stefan)
- BUG: The check for temporary files when doing an
       import wasn't able to delete those. (Stefan)
- BUG: The disk drive now shouldn't be scanned
       anymore if (in the settings) the icon
       overlays for removable drives is turned off.
       (Stefan)
- BUG: Pathnames weren't correctly converted for
       checkouts. (Stefan)
- ADD: in the settings page there's now an option
       if the user wants to have unversioned files
       shown before a commit so (s)he can add it
       before the commit. (Stefan)
- ADD: the add dialog now shows the files with
       the relative path so the user can better
       check if a file needs to be added or not.
       This is especially usefull if folders
       are added. (Stefan)
- ADD: Two new column providers: one for the URL
       of subversion files/folders and the other
       for a shortened URL without the server